perf(naver): by-category fan-out 병렬화 + 매핑/기간 테스트 추가
대시보드 느림 해결
- 병목: /api/naver/insights/by-category 의 광고그룹명 조회가
  7계정 × 캠페인별 N+1 직렬 호출 (콜드 호출 시 수십 초)
- 원인: executor 없는 CompletableFuture/parallelStream 은 공용
  ForkJoinPool(병렬도=CPU-1)을 써서 1-vCPU 환경에선 사실상 직렬
- config/AsyncConfig 에 I/O 전용 스레드풀(ioExecutor, 32) 도입
- 캠페인별 listAdGroups 병렬화, by-category 의 통계/광고그룹명 동시 실행

테스트 추가 (총 37케이스, .env 없이 ./gradlew test 통과)
- DateRangeTest        기간(datePreset) 환산
- NaverClassifierTest  온라인 캠페인명 → 서비스/본사·센터/센터추출
- CenterNameNormalizerTest  시트 센터명 정규화
- LeadEntryTest        신규콜 본사/방문요양/주간보호 분류
- OfflineMediaResolveTest   오프라인 광고 매체 매핑
- contextLoads 는 더미 OAuth 주입으로 .env 의존 제거

README: Render 배포 섹션 삭제, 테스트 섹션 추가

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>